--- a/index.html
+++ b/index.html
@@ -25,13 +25,17 @@
             <form id="contact-form">
                 <input type="text" name="name" placeholder="Your name" required/>
                 <input type="email" name="email" placeholder="Your email" required/>
-                <textarea name="meaage" placeholder="Your message" required></textarea>
+                <textarea name="message" placeholder="Your message" required></textarea>
                 <button type="submit">Send</button>
             </form>
         </section>
 
         <footer><p>Connect with me: <a href="https://github.com/IshaYounas">GitHub</a> | <a href="https://www.linkedin.com/in/isha-younas/">LinkedIn</a></p></footer>
         
+        <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+        <script>
+            emailjs.init('ekblDGhXLBns6cxlV');
+        </script>
         <script src="script.js"></script>
     </body>
 </html>
