--- a/index.html
+++ b/index.html
@@ -17,7 +17,22 @@
             </nav>
         </header>
 
-        <section id="about"><h2>About Me:</h2><p>...</p></section>
+        <section id="about">
+            <div class="about-container">
+                <div class="about-text">
+                    <h2>About Me:</h2>
+                    <p>Hello! I'm Isha Younas, a dedicated and enthusiastic software developer with a strong passion for creating engaging, user-friendly web applications. I enjoy working with technologies like HTML, CSS, and JavaScript, and I'm always looking to expand my knowledge and skill set.</p>
+                    <p>I'm currently pursuing a degree in Computing, where I focus on building real-world projects that combine creativity with functionality. Through my coursework and personal work, I've gained hands-on experience in developing practical solutions and learning through experimentation.</p>
+                    <p>Some of the projects I’ve enjoyed working on include recreations of Wordle and Tic Tac Toe, as well as a multi-game platform where I implemented user authentication, local storage, and dynamic gameplay features.</p>
+                    <p>My interests lie in front-end development, full-stack applications, and creating intuitive user experiences. Lately, I’ve been exploring backend development using Node.js and working with databases like Firebase and SQL to build more complete applications.</p>
+                    <p>Beyond coding, I have a keen interest in UI/UX design, enjoy reading tech articles, and value a good walk to recharge. I’m currently seeking internship opportunities where I can contribute, continue learning, and grow as a developer in a collaborative environment.</p>
+                </div>
+                <div class="about-image">
+                    <img src="images/profile.jpg" alt="Isha Younas">
+                </div>
+            </div>
+        </section>
+
         <section id="projects"><h2>Projects:</h2><div id="projects-list"></div></section>
         <section id="blog"><h2>Blog:</h2><p>...</p></section>
         <section id="contact">
