Implemented a dark mode version of the website, updated the styling to match both light and dark mode

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     </head>
     <body>
         <header>
+            <button id="dark-mode-toggle">Dark Mode</button>
             <h1>Hello, I'm Isha Younas</h1>
             <nav>
                 <a href="#about">About</a>
