Added a downloadable resume

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         </header>
 
         <section id="about">
+            <a href="files/resume.pdf" download class="resume-btn">Download Resume</a>
             <div class="about-container">
                 <div class="about-text">
                     <h2>About Me:</h2>
@@ -96,7 +97,11 @@
             </form>
         </section>
 
-        <footer><p>Connect with me: <a href="https://github.com/IshaYounas">GitHub</a> | <a href="https://www.linkedin.com/in/isha-younas/">LinkedIn</a></p></footer>
+        <footer>
+            <p>Connect with me: 
+                <a href="https://github.com/IshaYounas">GitHub</a> | <a href="https://www.linkedin.com/in/isha-younas/">LinkedIn</a>
+            </p>
+        </footer>
         
         <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
         <script>
